デッドロック関係

--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -458,9 +458,292 @@ private void DeadLock(){
 }
 ```
 
-``` sql
-BEGIN TRAN
+``` C#
+static void Main()
+{
+    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+    {
+        // 接続先の SQL Server インスタンス
+        DataSource = "SQLSV2016",
+        // 接続ユーザー名
+        UserID = "sa",
+        // 接続パスワード
+        Password = "Fx67kAP",
+        // 接続するデータベース
+        InitialCatalog = "itou_test_HKG",
+        // 接続タイムアウトの秒数(ms) デフォルトは 15 秒
+        ConnectTimeout = 60000
+    };
+    using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+    {
+        // データベース接続
+        connection.Open();
+        CreateTable(connection);
+        Insert(connection);
+    }
 
+    Task.WaitAll(
+        Task.Run(() =>
+        {
+            Console.WriteLine("UpdateTask1");
+            int counter = 0;
+            using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+            // データベース接続
+            connection.Open();
+            using SqlCommand command = new SqlCommand() { CommandTimeout = 60000 };
+            while (true)
+            {
+                try
+                {
+                    using SqlTransaction transaction = connection.BeginTransaction("query1");
+                    command.Connection = connection;
+                    command.Transaction = transaction;
+
+                    command.CommandText = new StringBuilder()
+                        .AppendLine("UPDATE [TEST_TBL1]")
+                        .AppendLine("SET [Name] = 'aaaaa'")
+                        .AppendLine("WHERE ID = 2;")
+                        .ToString();
+                    command.ExecuteNonQuery();
+
+                    command.CommandText = new StringBuilder()
+                        .AppendLine("UPDATE [TEST_TBL1]")
+                        .AppendLine("SET [Name] = 'bbbbb'")
+                        .AppendLine("WHERE ID = 1;")
+                        .ToString();
+                    command.ExecuteNonQuery();
+
+                    transaction.Commit();
+                    transaction.Dispose();
+
+                    counter++;
+                    Console.WriteLine(counter);
+                    if (counter >= 200)
+                    {
+                        break;
+                    }
+                }
+                catch (SqlException ex)
+                {
+                    Console.WriteLine("エラーNo:" + ex.Number.ToString() + " エラーメッセージ：" + ex.Message.ToString());
+                    break;
+                }
+            }
+        }),
+        Task.Run(() =>
+        {
+            Console.WriteLine("UpdateTask2");
+            int counter = 0;
+            using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+            // データベース接続
+            connection.Open();
+            using SqlCommand command = new SqlCommand() { CommandTimeout = 60000 };
+            while (true)
+            {
+                try
+                {
+                    using SqlTransaction transaction = connection.BeginTransaction("query2");
+                    command.Connection = connection;
+                    command.Transaction = transaction;
+
+                    command.CommandText = new StringBuilder()
+                        .AppendLine("UPDATE [TEST_TBL1]")
+                        .AppendLine("SET [Name] = 'ccccc'")
+                        .AppendLine("WHERE ID = 1;")
+                        .ToString();
+                    command.ExecuteNonQuery();
+
+                    command.CommandText = new StringBuilder()
+                        .AppendLine("UPDATE [TEST_TBL1]")
+                        .AppendLine("SET [Name] = 'ddddd'")
+                        .AppendLine("WHERE ID = 2;")
+                        .ToString();
+                    command.ExecuteNonQuery();
+
+                    transaction.Commit();
+                    transaction.Dispose();
+
+                    counter++;
+                    Console.WriteLine(counter);
+                    if (counter >= 200)
+                    {
+                        break;
+                    }
+                }
+                catch (SqlException ex)
+                {
+                    Console.WriteLine("エラーNo:" + ex.Number.ToString() + " エラーメッセージ：" + ex.Message.ToString());
+                    break;
+                }
+            }
+        })
+    );
+
+    // テーブルの作成
+    void CreateTable(SqlConnection connection)
+    {
+        Console.WriteLine("テーブルを作成");
+        StringBuilder query = new StringBuilder()
+            .AppendLine("DROP TABLE IF EXISTS [TEST_TBL1];")
+            .AppendLine("DROP TABLE IF EXISTS [TEST_TBL2];")
+            .AppendLine("CREATE TABLE [TEST_TBL1] ( ")
+            .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+            .AppendLine("    Name NVARCHAR(50) ")
+            .AppendLine("); ")
+            .AppendLine("CREATE TABLE [TEST_TBL2] ( ")
+            .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+            .AppendLine("    Name NVARCHAR(50) ")
+            .AppendLine("); ");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            command.ExecuteNonQuery();
+            Console.WriteLine("テーブル作成完了");
+            Console.WriteLine();
+        }
+    }
+
+    // INSERT デモ
+    void Insert(SqlConnection connection)
+    {
+        StringBuilder query = new StringBuilder()
+            .AppendLine("INSERT [TEST_TBL1] (ID, Name) ")
+            .AppendLine("VALUES")
+            .AppendLine("    (1,'test001'),")
+            .AppendLine("    (2,'test002');")
+            .AppendLine("INSERT [TEST_TBL2] (ID, Name) ")
+            .AppendLine("VALUES")
+            .AppendLine("    (1,'test001'),")
+            .AppendLine("    (2,'test002');");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            int rowsAffected = command.ExecuteNonQuery();
+            Console.WriteLine(rowsAffected + " 行 挿入されました。");
+            Console.WriteLine();
+        }
+    }
+
+    void UpdateTask1()
+    {
+        Console.WriteLine("UpdateTask1");
+        int counter = 0;
+        using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+        // データベース接続
+        connection.Open();
+        using SqlCommand command = new SqlCommand() { CommandTimeout = 60000 };
+        while (true)
+        {
+            try
+            {
+                using SqlTransaction transaction = connection.BeginTransaction("query1");
+                command.Connection = connection;
+                command.Transaction = transaction;
+
+                command.CommandText = new StringBuilder()
+                    .AppendLine("UPDATE [TEST_TBL1]")
+                    .AppendLine("SET [Name] = 'aaaaa'")
+                    .AppendLine("WHERE ID = 2;")
+                    .ToString();
+                Console.WriteLine(command.ExecuteNonQuery());
+
+                command.CommandText = new StringBuilder()
+                    .AppendLine("UPDATE [TEST_TBL2]")
+                    .AppendLine("SET [Name] = 'bbbbb'")
+                    .AppendLine("WHERE ID = 1;")
+                    .ToString();
+                Console.WriteLine(command.ExecuteNonQuery());
+
+                transaction.Commit();
+                transaction.Dispose();
+
+                counter++;
+                if (counter >= 10)
+                {
+                    break;
+                }
+            }
+            catch (SqlException ex)
+            {
+                Console.WriteLine("エラーNo:" + ex.Number.ToString() + " エラーメッセージ：" + ex.Message.ToString());
+                break;
+            }
+        }
+
+    }
+
+    void UpdateTask2()
+    {
+        Console.WriteLine("UpdateTask2");
+        int counter = 0;
+        using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+        // データベース接続
+        connection.Open();
+        using SqlCommand command = new SqlCommand() { CommandTimeout = 60000 };
+        while (true)
+        {
+            try
+            {
+                using SqlTransaction transaction = connection.BeginTransaction("query2");
+                command.Connection = connection;
+                command.Transaction = transaction;
+
+                command.CommandText = new StringBuilder()
+                    .AppendLine("UPDATE [TEST_TBL1]")
+                    .AppendLine("SET [Name] = 'ccccc'")
+                    .AppendLine("WHERE ID = 1;")
+                    .ToString();
+                Console.WriteLine(command.ExecuteNonQuery());
+
+                command.CommandText = new StringBuilder()
+                    .AppendLine("UPDATE [TEST_TBL2]")
+                    .AppendLine("SET [Name] = 'ddddd'")
+                    .AppendLine("WHERE ID = 2;")
+                    .ToString();
+                Console.WriteLine(command.ExecuteNonQuery());
+
+                transaction.Commit();
+                transaction.Dispose();
+
+                counter++;
+                if (counter >= 10)
+                {
+                    break;
+                }
+            }
+            catch (SqlException ex)
+            {
+                Console.WriteLine("エラーNo:" + ex.Number.ToString() + " エラーメッセージ：" + ex.Message.ToString());
+                break;
+            }
+        }
+    }
+}
+```
+
+``` sql
+DROP TABLE IF EXISTS [TEST_TBL1];
+DROP TABLE IF EXISTS [TEST_TBL2];
+CREATE TABLE [TEST_TBL1] ( 
+    ID INT NOT NULL PRIMARY KEY, 
+    Name NVARCHAR(50) 
+); 
+CREATE TABLE [TEST_TBL2] ( 
+    ID INT NOT NULL PRIMARY KEY, 
+    Name NVARCHAR(50) 
+); 
+
+
+INSERT [TEST_TBL1] (ID, Name) 
+VALUES
+    (1,'test001'),
+    (2,'test002');
+INSERT [TEST_TBL2] (ID, Name) 
+VALUES
+    (1,'test001'),
+    (2,'test002');
+
+-- 別々のタブを開いて別々に実行する
+-- まずこっちを実行してから
+BEGIN TRAN
 UPDATE [TEST_TBL1]
 SET [Name] = 'aaaaa'
 WHERE ID = 2;
@@ -470,12 +753,10 @@ WAITFOR DELAY '00:00:05';
 UPDATE [TEST_TBL2]
 SET [Name] = 'bbbbb'
 WHERE ID = 2;
-
 COMMIT TRAN
 
-
+-- こっちを実行する
 BEGIN TRAN
-
 UPDATE [TEST_TBL2]
 SET [Name] = 'ccccc'
 WHERE ID = 2;
@@ -485,13 +766,180 @@ WAITFOR DELAY '00:00:03';
 UPDATE [TEST_TBL1]
 SET [Name] = 'dddd'
 WHERE ID = 2;
-
 COMMIT TRAN
 ```
 
 ---
 
 ## 実務
+
+``` C#
+{
+    _DapperAction.ExecuteQuery(ConnectionTypes.Data,query.ToString(),param);
+}
+
+{
+    private ConnectionManager _ConnectionManager;
+    /// <summary>
+    /// コンストラクタ
+    /// </summary>
+    /// <param name="connectionManager"></param>
+    public DapperAction(ConnectionManager connectionManager)
+    {
+        _ConnectionManager = connectionManager;
+    }
+    /// <summary>
+    /// クエリを実行します
+    /// </summary>
+    /// <param name="connectionType">コネクション区分（接続先）</param>
+    /// <param name="query">クエリ</param>
+    /// <param name="param">パラメータ</param>
+    public void ExecuteQuery(ConnectionTypes connectionType, string query, object param = null)
+    {
+        var connection = _ConnectionManager.Connect(connectionType);
+        if (connection == null)
+        {
+            // コネクションが確立できない場合は処理を中断する
+            return;
+        }
+        if (param != null)
+        {
+            connection.Execute(query, param);
+        }
+        else
+        {
+            connection.Execute(query);
+        }
+    }
+}
+
+{
+    /// <summary>
+    /// SqlConnectionとDapperActionを内包したクラスです
+    /// </summary>
+    /// <remarks>
+    /// インスタンスをNewするとコネクションを接続し、DisposeでコネクションのDisposeを呼び出します
+    /// DapperActionは自身のコネクションに対してDapperActionの機能を呼び出す機能を実装します
+    /// </remarks>
+    public class ConnectionManager : IDisposable
+    {
+        /// <summary>
+        /// 共有コネクションディクショナリ
+        /// </summary>
+        /// <remarks>
+        /// 接続先ごとに保持しているため同じ接続先でコネクションを分けることはできません。
+        /// </remarks>
+        private IDictionary<ConnectionTypes, SqlConnection> _SharedConnectionDictionary;
+
+        /// <summary>
+        /// コンストラクタ
+        /// </summary>
+        public ConnectionManager()
+        {
+            // トランザクションスコープ外の共有コネクションを接続します。
+            _SharedConnectionDictionary = new Dictionary<ConnectionTypes, SqlConnection>();
+
+            var dataConnection = new SqlConnection(Configurations.ConnectionContainer.DataConnection.ConnectionString);
+            dataConnection.Open();
+            _SharedConnectionDictionary.Add(
+                ConnectionTypes.DataWithOutTransactionScope,
+                dataConnection);
+
+            var systemConnection = new SqlConnection(Configurations.ConnectionContainer.SystemConnection.ConnectionString);
+            systemConnection.Open();
+            _SharedConnectionDictionary.Add(
+                ConnectionTypes.SystemWithOutTransactionScope,
+                systemConnection);
+        }
+
+        /// <summary>
+        /// リソースを解放します
+        /// </summary>
+        /// <remarks>
+        /// コネクションのリソースを解放するために実装
+        /// </remarks>
+        public void Dispose()
+        {
+            foreach (var pair in _SharedConnectionDictionary)
+            {
+                pair.Value.Dispose();
+            }
+            _SharedConnectionDictionary = null;
+        }
+
+        /// <summary>
+        /// 指定した接続先に対するコネクションがないのなら接続を確立し
+        /// コネクションインスタンスをディクショナリに保持します
+        /// </summary>
+        /// <param name="connectionType">コネクション区分（接続先）</param>
+        /// <returns>指定した接続先のコネクション</returns>
+        public SqlConnection Connect(ConnectionTypes connectionType)
+        {
+            if (_SharedConnectionDictionary == null)
+            {
+                _SharedConnectionDictionary = new Dictionary<ConnectionTypes, SqlConnection>();
+            }
+            var connnectionContainer = _SharedConnectionDictionary.FirstOrDefault(f => f.Key == connectionType);
+            if (!connnectionContainer.Equals(default(KeyValuePair<ConnectionTypes, SqlConnection>)))
+            {
+                // すでに接続が確立しているのなら処理をしない
+                return connnectionContainer.Value;
+            }
+
+            SqlConnection connection = null;
+            // コネクション区分から接続先DBへのコネクションを作成
+            switch (connectionType)
+            {
+                case ConnectionTypes.Data:
+                    connection = new SqlConnection(Configurations.ConnectionContainer.DataConnection.ConnectionString);
+                    break;
+                case ConnectionTypes.System:
+                    connection = new SqlConnection(Configurations.ConnectionContainer.SystemConnection.ConnectionString);
+                    break;
+                default:
+                    break;
+            }
+            if (connection != null)
+            {
+                // コネクション接続
+                connection.Open();
+                _SharedConnectionDictionary.Add(connectionType, connection);
+                return connection;
+            }
+            return null;
+        }
+
+        /// <summary>
+        /// 保持しているコネクションを破棄します
+        /// </summary>
+        public void DisConnect()
+        {
+            if (_SharedConnectionDictionary == null)
+            {
+                return;
+            }
+            foreach (var connnectionContainer in _SharedConnectionDictionary)
+            {
+                if (connnectionContainer.Key == ConnectionTypes.Data
+                    || connnectionContainer.Key == ConnectionTypes.System)
+                {
+                    connnectionContainer.Value.Dispose();
+                }
+            }
+            if (_SharedConnectionDictionary.ContainsKey(ConnectionTypes.Data))
+            {
+                _SharedConnectionDictionary.Remove(ConnectionTypes.Data);
+            }
+            if (_SharedConnectionDictionary.ContainsKey(ConnectionTypes.System))
+            {
+                _SharedConnectionDictionary.Remove(ConnectionTypes.System);
+            }
+        }
+    }
+}
+
+
+```
 
 ``` C#
         /// <summary>
@@ -1074,3 +1522,47 @@ namespace RN3.Web.Common.Store.Config
         End Using
     End Sub
 ```
+
+---
+
+## SqlConnectionをUsingした場合、Disposeと同時にCloseされるのでFinallyで明示的にCloseする必要はない
+
+SqlConnection using close  
+
+[Microsoft公式_SqlConnection.Close メソッド](https://docs.microsoft.com/ja-jp/dotnet/api/system.data.sqlclient.sqlconnection.close?redirectedfrom=MSDN&view=netframework-4.7.2#System_Data_SqlClient_SqlConnection_Close)  
+
+>次の例では、作成、 SqlConnection開き、そのプロパティの一部を表示します。  
+>**接続はブロックの最後で自動的に using 閉じられます**。  
+
+``` C#
+private static void OpenSqlConnection(string connectionString)
+{
+    using (SqlConnection connection = new SqlConnection(connectionString))
+    {
+        connection.Open();
+        Console.WriteLine("ServerVersion: {0}", connection.ServerVersion);
+        Console.WriteLine("State: {0}", connection.State);
+    }
+}
+```
+
+[SqlConnectionとSqlDataReaderをusingで囲った場合Closeは必要？](https://social.msdn.microsoft.com/Forums/ja-JP/c2a0c8b2-7743-4cfa-869c-f26293b0250f/sqlconnection12392sqldatareader12434using123912225812387123832258021512close?forum=csharpgeneralja)  
+
+>SqlConnection.Close()にはClose と Dispose は、機能的に同じです。  
+>「DbDataReader.Dispose()にこのメソッドは Close を呼び出します。」と書かれています。  
+
+[using文で初期化したDbConnection、Closeを書くべき？書かなくていい？](https://qiita.com/momotaro98/items/c4fe0fff0c173e879f2d)  
+>using文は、try {} finally {XXX.Dispose();}をわざわざ書かなくてすむようにする糖衣構文ということです。  
+  
+→へぇ～そうだったんだ。  
+
+>functionally equivalentとあるように、 DbConnectionクラスにとっては、機能的にはCloseもDisposeもどちらも変わらない ということです。  
+>なので、using文ではDisposeメソッドを必ず呼ぶので、結果、Closeメソッドは基本的に不要ということです。  
+>しかし、1つ異なる点があります。  
+>Closeメソッドは再度そのインスタンスを再Openできるのに、対し、Disposeメソッドは一度実行されたら、そのインスタンスにはアクセスできない。  
+
+■ではなぜCloseを書くのか  
+[Should I call Close() or Dispose() for stream objects?](https://stackoverflow.com/questions/7524903/should-i-call-close-or-dispose-for-stream-objects/7525134#7525134)  
+>It doesn't affect the behaviour of the code, but it does aid readability.  
+>つまり、 可読性のため。(既存のコードに影響を与えないし) とのこと。  
+>複数のスコープがあるとどこでインスタンスがCloseされているのかがわかりにくくなるので、Closeを書くとよいということです。  
