--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -381,6 +381,28 @@ Microsoft RDLC Report Designer
 
 ---
 
+## デフォルト
+
+デフォルト値が入るようになっているテーブルへのINSERTでそのテーブルはずしたらどうなる？
+デフォルト値が入るでしょう。
+→事実入りました。
+
+``` sql
+INSERT INTO TRe_ReservationPlayer2
+(PlayerNo,OfficeCD,ReservationNo,ReservationFrameNo,BusinessDate,SeatNo)
+VALUES(
+'KHG202299999999','KHG','KHG20229999999','KHG202205299999','2022-05-20',1
+)
+```
+
+``` txt
+PlayerNo	OfficeCD	ReservationNo	ReservationFrameNo	BusinessDate	SeatNo	ReservationCancelFlag	ReservationCancelDate	FrontCancelFlag	CooperationClsCD	
+
+KHG202299999999	KHG	KHG20229999999	KHG202205299999	2022-05-20	1	NULL	NULL	0	NULL
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -419,3 +441,22 @@ Issueってなんすかね。
 ・ASP.Net Core API + Vue axios 通信サンプル
 ・Vueの最低限の実装とそこまでのまとめ
 ・最低限帳票を出力するだけのサンプルとか
+[新人プログラマに知っておいてもらいたい人類がオブジェクト指向を手に入れるまでの軌跡](https://qiita.com/hirokidaichi/items/591ad96ab12938878fe1)  
+
+
+・健康診断
+・部長が公園のベンチにいた
+悪い予感しかしない。
+
+
+・なんかこのマスクにしてからいい感じな気がする。
+やっぱり黒マスクは駄目だな。
+
+・ワイヤレスマウス購入
+もうこれでよくね？と思って購入。
+進む戻るボタン付きのマウスで500円近くのものって全然ないんだなって思った。
+
+
+・意図的にデッドロックを起こすサンプル
+・デッドロック対応まとめ
+
