・ラムダ式でyield return ・static constructer ・abstract,interface

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -368,7 +368,7 @@ SSH トンネル
 
 ---
 
-## 帳票印刷　プログラミング
+## 帳票印刷プログラミング
 
 ActiveReportを使わなくても帳票を出力する仕組みは存在する模様。  
 本まであった。
@@ -400,6 +400,14 @@ PlayerNo	OfficeCD	ReservationNo	ReservationFrameNo	BusinessDate	SeatNo	Reservati
 
 KHG202299999999	KHG	KHG20229999999	KHG202205299999	2022-05-20	1	NULL	NULL	0	NULL
 ```
+
+---
+
+## JavaSilver
+
+[JavaSilver試験をオンラインで受験する際の流れ](https://yumanoblog.com/java-silver/)  
+
+JavaSilverはLPICと同じ要領で自宅受験可能な模様。  
 
 ---
 
@@ -440,23 +448,5 @@ Issueってなんすかね。
 
 ・ASP.Net Core API + Vue axios 通信サンプル
 ・Vueの最低限の実装とそこまでのまとめ
-・最低限帳票を出力するだけのサンプルとか
+
 [新人プログラマに知っておいてもらいたい人類がオブジェクト指向を手に入れるまでの軌跡](https://qiita.com/hirokidaichi/items/591ad96ab12938878fe1)  
-
-
-・健康診断
-・部長が公園のベンチにいた
-悪い予感しかしない。
-
-
-・なんかこのマスクにしてからいい感じな気がする。
-やっぱり黒マスクは駄目だな。
-
-・ワイヤレスマウス購入
-もうこれでよくね？と思って購入。
-進む戻るボタン付きのマウスで500円近くのものって全然ないんだなって思った。
-
-
-・意図的にデッドロックを起こすサンプル
-・デッドロック対応まとめ
-
