・オブジェクト指向 ・整理

--- a/Programming/オブジェクト指向プログラミング.md
+++ b/Programming/オブジェクト指向プログラミング.md
@@ -7,6 +7,8 @@
 [オブジェクト指向と戦った戦士達の軌跡](http://nmksb.seesaa.net/article/437810253.html)  
 [なぜオブジェクト指向は難しいのか](https://qiita.com/tutinoco/items/7f7568cc7dbf7e2276c8)  
 
+[新人プログラマに知っておいてもらいたい人類がオブジェクト指向を手に入れるまでの軌跡](https://qiita.com/hirokidaichi/items/591ad96ab12938878fe1)  
+
 ## 定義
 
 [オブジェクト指向プログラミング](https://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0.html)  
@@ -33,6 +35,15 @@
 
 ・データと手続きをクラス(若しくはオブジェクト)にまとめる  
 ・まとめた物を他のまとめた物(オブジェクト)と組み合わせてプログラムしていく  
+
+良い凝縮度、良い結合度。
+不必要なデータの隠蔽。
+これらを実現したかったからオブジェクト指向が生まれた。  
+オブジェクトのメインはオブジェクトとのメッセージのやり取り。  
+オブジェクト指向という言葉は重要な要素であるメッセージの意図が伝わりにくいので失敗だったとアランケイも言っている。  
+
+データと手続きをクラスという抽象データ型にまとめ、他のオブジェクトと組み合わせてプログラミングしていく手法。  
+特徴としてカプセル化、多態性、継承等の概念が存在する。  
 
 ---
 
