--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -1527,3 +1527,264 @@ namespace RN3.Web.Common.Store.Config
 ```
 
 ---
+
+## DAL
+
+``` C#
+using RN3.Web.Common.Connection;
+using RN3.Web.Common.Data.Entity;
+using RN3.Web.Common.Data.Enum;
+using RN3.Web.Common.Data.Request;
+using RN3.Web.Common.Util.Extension;
+using RN3.Web.Common.Util.Model;
+using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Text;
+
+namespace RN3.Web.Common.Model
+{
+    /// <summary>
+    /// テーブルモデルベース
+    /// </summary>
+    /// <typeparam name="T">テーブルクラス</typeparam>
+    public abstract class ModelBase<T> where T : IEntityCommonField
+    {
+        /// <summary>
+        /// ダッパー
+        /// </summary>
+        protected DapperAction _DapperAction;
+
+        /// <summary>
+        /// 主キーを取得します。
+        /// テーブルクラスの該当プロパティに「KeyAttribute」を設定する必要があります。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <returns></returns>
+        public Dictionary<string, object> GetKeys(T data)
+        {
+            var primaryProps = typeof(T).GetProperties().Where(w => w.CustomAttributes.Any(w => w.AttributeType.Equals(typeof(KeyAttribute))));
+            return new Dictionary<string, object>(primaryProps.Select(s => new KeyValuePair<string, object>(s.Name, s.GetValue(data))));
+        }
+
+        /// <summary>
+        /// 主キーを取得します。
+        /// </summary>
+        /// <typeparam name="TKey"></typeparam>
+        /// <param name="key"></param>
+        /// <returns></returns>
+        public Dictionary<string, object> GetKeys<TKey>(TKey key) where TKey : class
+        {
+            return key.PropertyToDictionary();
+        }
+
+        /// <summary>
+        /// 該当するデータを一件取得します。
+        /// </summary>
+        /// <param name="keys">主キー</param>
+        /// <returns></returns>
+        public abstract T Get(Dictionary<string, object> keys);
+
+        /// <summary>
+        /// 該当するデータを新規保存します。
+        /// </summary>
+        /// <param name="data">保存データ</param>
+        /// <returns></returns>
+        public abstract void Insert(T data);
+
+        /// <summary>
+        /// 新規作成します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="staffCD"></param>
+        /// <param name="staffName"></param>
+        /// <param name="program"></param>
+        /// <param name="terminal"></param>
+        public void Insert(T data, string staffCD, string staffName, string program, string terminal)
+        {
+            DateTime now = DateTime.Now;
+            Insert(data, now, staffCD, staffName, program, terminal);
+        }
+
+        /// <summary>
+        /// 新規作成します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="now"></param>
+        /// <param name="staffCD"></param>
+        /// <param name="staffName"></param>
+        /// <param name="program"></param>
+        /// <param name="terminal"></param>
+        public void Insert(T data, DateTime now, string staffCD, string staffName, string program, string terminal)
+        {
+            SetInsertCommonField(data, now, staffCD, staffName, program, terminal);
+            SetUpdateCommonField(data, now, staffCD, staffName, program, terminal);
+            Insert(data);
+        }
+
+        /// <summary>
+        /// 該当するデータを更新します。
+        /// </summary>
+        /// <param name="data">更新データ</param>
+        /// <returns></returns>
+        public abstract void Update(T data);
+
+        /// <summary>
+        /// 更新します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="staffCD"></param>
+        /// <param name="staffName"></param>
+        /// <param name="program"></param>
+        /// <param name="terminal"></param>
+        public void Update(T data, string staffCD, string staffName, string program, string terminal)
+        {
+            DateTime now = DateTime.Now;
+            Update(data, now, staffCD, staffName, program, terminal);
+        }
+
+        /// <summary>
+        /// 更新します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="now"></param>
+        /// <param name="staffCD"></param>
+        /// <param name="staffName"></param>
+        /// <param name="program"></param>
+        /// <param name="terminal"></param>
+        public void Update(T data, DateTime now, string staffCD, string staffName, string program, string terminal)
+        {
+            SetUpdateCommonField(data, now, staffCD, staffName, program, terminal);
+            Update(data);
+        }
+
+        /// <summary>
+        /// 保存します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="staffCD">社員コード</param>
+        /// <param name="staffName">社員名</param>
+        /// <param name="program">プログラム名</param>
+        /// <param name="terminal">端末名</param>
+        /// <param name="needAssertNotUpdated">先勝ち処理をするかどうか</param>
+        public SaveType Save(T data, string staffCD, string staffName, string program, string terminal, bool needAssertNotUpdated = true)
+        {
+            //データ取得
+            DateTime now = DateTime.Now;
+            //保存
+            return Save(data, now, staffCD, staffName, program, terminal, needAssertNotUpdated);
+        }
+
+        /// <summary>
+        /// 保存します。
+        /// </summary>
+        /// <param name="data"></param>
+        /// <param name="now"></param>
+        /// <param name="staffCD"></param>
+        /// <param name="staffName"></param>
+        /// <param name="program"></param>
+        /// <param name="terminal"></param>
+        /// <param name="needAssertNotUpdated"></param>
+        /// <returns></returns>
+        public SaveType Save(T data, DateTime now, string staffCD, string staffName, string program, string terminal, bool needAssertNotUpdated = true)
+        {
+            //データ取得
+            var beforeData = Get(GetKeys(data));
+            //保存
+            var saveType = ModelUtil.DecideSaveMethod(data, beforeData, needAssertNotUpdated);
+            switch (saveType)
+            {
+                case SaveType.Insert:
+                    Insert(data, now, staffCD, staffName, program, terminal);
+                    break;
+                case SaveType.Update:
+                    Update(data, now, staffCD, staffName, program, terminal);
+                    break;
+            }
+            return saveType;
+        }
+
+        /// <summary>
+        /// 作成共通フィールドを設定します。
+        /// </summary>
+        /// <param name="data">設定先</param>
+        /// <param name="dateTime">現在日時</param>
+        /// <param name="staffCD">社員コード</param>
+        /// <param name="staffName">社員名</param>
+        /// <param name="program">プログラム</param>
+        /// <param name="terminal">端末</param>
+        protected void SetInsertCommonField(T data, DateTime dateTime, string staffCD, string staffName, string program, string terminal)
+        {
+            data.InsertDateTime = dateTime;
+            data.InsertStaffCD = staffCD;
+            data.InsertStaffName = staffName;
+            data.InsertProgram = program;
+            data.InsertTerminal = terminal;
+        }
+
+
+        /// <summary>
+        /// 更新共通フィールドを設定します。
+        /// </summary>
+        /// <param name="data">設定先</param>
+        /// <param name="dateTime">現在日時</param>
+        /// <param name="staffCD">社員コード</param>
+        /// <param name="staffName">社員名</param>
+        /// <param name="program">プログラム</param>
+        /// <param name="terminal">端末</param>
+        protected void SetUpdateCommonField(T data, DateTime dateTime, string staffCD, string staffName, string program, string terminal)
+        {
+            data.UpdateDateTime = dateTime;
+            data.UpdateStaffCD = staffCD;
+            data.UpdateStaffName = staffName;
+            data.UpdateProgram = program;
+            data.UpdateTerminal = terminal;
+        }
+
+        /// <summary>
+        /// 指定したキーを削除します。
+        /// </summary>
+        /// <typeparam name="TKey"></typeparam>
+        /// <param name="key"></param>
+        /// <param name="tableName">指定しない場合はTのクラス名を使用します。</param>
+        /// <param name="needAssertNotUpdated">先勝ち処理をするかどうか</param>
+        public void Delete<TKey>(DeleteKey<TKey> key, string tableName = null, bool needAssertNotUpdated = true) where TKey : class
+        {
+            tableName ??= typeof(T).Name;
+
+            var beforeData = Get(GetKeys(key.Key));
+
+            ModelUtil.AssertValidationOptimisticDelete(key.UpdateDateTime, beforeData, needAssertNotUpdated);
+
+            DeleteQueryExecute(key.Key, tableName);
+        }
+
+        /// <summary>
+        /// 削除クエリを実行します。
+        /// </summary>
+        /// <typeparam name="TKey"></typeparam>
+        /// <param name="key"></param>
+        /// <param name="tableName"></param>
+        protected virtual void DeleteQueryExecute<TKey>(TKey key, string tableName) where TKey : class
+        {
+            StringBuilder deleteQuery = new StringBuilder();
+            deleteQuery
+                .Append("DELETE FROM [").Append(tableName).AppendLine("]");
+            var keysProp = typeof(TKey).GetProperties();
+            var conditions = keysProp.Select(s => "[" + s.Name + "] = @" + s.Name);
+            deleteQuery.Append("WHERE ").AppendJoin(" AND ", conditions);
+            _DapperAction.ExecuteQuery(GetConnectionTypes(), deleteQuery.ToString(), key);
+        }
+
+        /// <summary>
+        /// 接続タイプを取得
+        /// </summary>
+        /// <returns></returns>
+        protected virtual ConnectionTypes GetConnectionTypes()
+        {
+            return ConnectionTypes.Data;
+        }
+    }
+}
+```
