--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -437,3 +437,20 @@ Issueってなんすかね。
 
 ・ASP.Net Core API + Vue axios 通信サンプル
 ・Vueの最低限の実装とそこまでのまとめ
+
+[Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
+sqlserver 断片化  
+
+
+最近花粉症が軽くて助かる。
+6月も中旬なのでそろそろ落ち着いてくるころだろう。
+
+足の筋肉痛は治ってきた。
+上半身がちょっと貼ってる。
+昨日の腹筋と腕立てが聞いた模様。
+でも、痛いというところまでいっていない。
+
+
+今日も気分は最悪だ。
+仕事すると最悪になる。
+
