xaml フォーカス参考追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -441,6 +441,8 @@ Issueってなんすかね。
 [Prism入門 その5 - IEventAggregator](https://qiita.com/swd/items/2910c1d87a4c54f16077)  
 sqlserver 断片化  
 
+xaml コントロールにフォーカス
+https://alfort.online/827
 
 最近花粉症が軽くて助かる。
 6月も中旬なのでそろそろ落ち着いてくるころだろう。
