--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -400,6 +400,94 @@ JavaSilverはLPICと同じ要領で自宅受験可能な模様。
 
 ---
 
+## x86, x64
+
+[【今更聞けない！】32bitと64bitの違いとは？ まとめ](https://eng-entrance.com/32bit-64bit#bit)  
+
+### そもそも「32bit 64bit 違い」はどこが基準なのか？
+
+結論からいってしまえば、これらの違いは「**記憶装置のbit幅**」だ。  
+
+この記憶装置を「レジスタ」と呼ぶ。  
+このレジスタのサイズが16bitならば「16bitCPU」となりサイズが64bitならば「64bitCPU」となる。  
+レジスタはキャッシュよりも高速で記憶容量も小さい、コンピュータの記憶装置のなかでは最も高速に動作する記憶装置である。  
+レジスタは漠然とした記憶媒体というよりは「演算の対象や演算結果」を記憶するために使用される。  
+
+CPU  
+レジスタ  
+L1キャッシュ  
+L2キャッシュ  
+メモリー  
+ディスクキャッシュ  
+HDD  
+
+### 計算をするために使われるレジスタ
+
+一般的にレジスタが大きいと一度に扱える情報は増える。  
+16bitが一度に処理できる情報は2の16乗すなわち65536であり、これが64bitともなると2の64乗つまり18446744073709551616という途方もない数字になる。  
+
+一度に取り扱える情報が増える程大量のデータをさばけるようになるので、処理の高速化もはかれるようになる。  
+また発展とともにbit数が増加すると機能が高度化される。  
+つまりCPUの「便利な命令」が増えるのである。  
+
+そのため高速になるが新しい命令をくみこまれていない過去のCPUでは動かないプログラムも出てくる。  
+現在主流のx86の命令をx86_64は実行できるが、その逆は実行できない。  
+「64bitのCPUで32bitの命令を実行することは可能」だが「32bitのCPUで64bitのCPUの命令を実行することは出来ない。」わけだ。
+
+### メモリの上限
+
+32bit環境では「メモリ4GBの壁」というものが存在する。  
+32bitPCだと、メモリを4GB以上積んだとしても使えない。  
+
+2進数で考えると、32bitならば物理的に42億9496万7296のアドレス空間が存在する。  
+それに1アドレス1byteを割り当てることになる。  
+利用できる容量は最大42億9496万7296バイト = 約4GBとなる  
+
+メモリーには、どの場所にデータを格納するかを管理するために、1バイト単位で“番地”が割り振られています。  
+この番地の総数は、32ビット版では42億9496万7296。  
+このため、利用できる容量は最大42億9496万7296バイト = 約4GBとなります  
+
+※1024Byteがいわゆる1KB。4096Byteで4KB。千をかけると4MB。さらに千をかければ4GB。  
+※64ビット(約1845京)は理論上、16EB（エクサバイト、約172億GB）が上限  
+※WindowsではOSが使う領域があるので実質3GBまでしか使えない　　
+
+### 何故64bit環境で32bitのアプリケーションが動作するのか？
+
+確かにハードウェアレベルで64bit上で32bitのアプリケーションは動作するが、ソフトウェアレベルの話になると「64bitのバイナリだけの環境で32bitは動くのか？」という疑問にあたるはずだ。  
+
+実際には32bitライブラリなどがないと動作しない。  
+そのためWindowsの場合、32bitライブラリをデフォルトで同梱している。  
+Linuxの場合、LFSやGentooなどのソースベースのディストリビューションなどで32bitバイナリ抜きの純粋な64bitシステムを構築することが可能になっている。  
+
+その場合一切32bitアプリケーションは動作しない。  
+それでもLinuxなどはソースコードベースな文化のなかにあるので、必要ならば、64bitを前提としアプリケーションをコンパイルしなおして64bitバイナリを作成することが出来る。  
+
+Linuxの場合32bitライブラリを同梱するかどうか？というのは実用的かどうかではなく拘泥の問題という部分が大きいだろう。  
+
+### 64bitはx64なのに、なぜ32bitOSはx86と呼ばれるのか？
+
+[ややこしい! PCソフトをDLする際に確認すべき「x86」と「x64」って?](https://news.mynavi.jp/techplus/article/20200416-1018112/)  
+
+なぜ32ビット版はx32ではなく、x86と呼ばれているのでしょうか。  
+それはIntelのマイクロプロセッサの型番が由来となっています。  
+
+マイクロプロセッサ(MPU)とは、コンピュータの演算や制御機能をマイクロチップに搭載したもので、CPUとして使われています。  
+1978年にIntelが開発したMPUの型番が「8086」であり、1989年に発売された「80486」まで、「○○86」という型番が使用されていました。  
+これらの製品に使われている命令セットアーキテクチャ(ISA)の名称がx86であり、また、製品シリーズの名称でもあるのです。  
+
+命令セットアーキテクチャとは、命令コードと処理動作の関係を定めたもの。  
+命令と動作の他、動作を定義する前提となるMPUの設計や仕組みも定義されています。  
+
+### x86を64ビットに拡張したものがx64
+
+x86命令セットアーキテクチャは16ビットから始まり、32ビット拡張版を経て、64ビットに拡張されました。  
+この64ビット版がx64です。  
+
+64ビット版x86は、x86の互換製品を製造していたAMDが2000年に「x86-64」の名前で発表され、2003年に「AMD64」の名前で実装しました。  
+続いてIntelが実装した命令セットに「Intel64」があり、これらAMD64互換の命令セットを総称してx64と呼びます。
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
