非同期追加

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -406,12 +406,79 @@ Task.Factory.StartNewが不要になったわけではない。
     }
 ```
 
-async await 同期 同じ　c#  
+async await 同期 同じ c#  
 [[C#]await利用時の同期コンテキストと実行スレッドの動きについてコードを動かして見ていく](https://qiita.com/Kosei-Yoshida/items/7afe6c2f6158f36f50b1)  
 [【C#】ASYNC/AWAITで同期メソッドから非同期メソッドを呼ぶ方法](https://nryblog.work/call-sync-to-async-method/)  
 
 何回もボタンを押した後で、〇〇のスレッドが終了しましたってのはそういう意味なのかもしれない？
 そのスレッドの処理が終わったことを通知するアナウンスなんだろうな。
+
+## Async Void と _ = Task.Run は同じか？
+
+[c# async voidでawait Task.Run()失敗の巻](https://qiita.com/twentyfourhours/items/3451f39567239f951a1a)  
+多分同じ。  
+
+``` C#
+        // Start 0
+        // Start 1
+        // Start 2
+        // End 1
+        // End 0
+        // End 2
+        private async void Button_Click(object sender, RoutedEventArgs e)
+        {
+            for (int i = 0; i < 3; i++)
+            {
+                await Task.Run(() => DelayMethodByAsyncVoid(i));
+            }
+        }
+        async void DelayMethodByAsyncVoid(int id)
+        {
+            Console.WriteLine("Start " + id);
+            await Task.Delay(2000);
+            Console.WriteLine("End " + id);
+        }
+
+        // Start 0
+        // Start 1
+        // Start 2
+        // End 2
+        // End 1
+        // End 0
+        private void Button_Click_1(object sender, RoutedEventArgs e)
+        {
+            for (int i = 0; i < 3; i++)
+            {
+                _ = DelayMethodByAsyncTask(i);
+            }
+        }
+
+        // こいつだけは明らかに動作が違うのでやるな
+        // Start 3
+        // Start 3
+        // Start 3
+        // End 3
+        // End 3
+        // End 3
+        private void Button_Click_2(object sender, RoutedEventArgs e)
+        {
+            for (int i = 0; i < 3; i++)
+            {
+                _ = Task.Run(() => DelayMethodByAsyncTask(i));
+            }
+        }
+
+        async Task DelayMethodByAsyncTask(int id)
+        {
+            Console.WriteLine("Start " + id);
+            await Task.Delay(2000);
+            Console.WriteLine("End " + id);
+        }
+```
+
+---
+
+## Async void ってなんだ？
 
 ---
 
@@ -462,3 +529,9 @@ static async void executeAsync()
     Console.WriteLine("step 2");
 }
 ```
+
+---
+
+## UIスレッド以外からUIのコントロールを操作する
+
+[【C#】UIスレッド以外からUIのコントロールを操作する](https://hikotech.net/post-388/)  
