--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -238,6 +238,7 @@ comroomみたいなものか
 [WebAssemblyとは？〜実際にC言語をブラウザで動かす〜【2019年6月版】](https://qiita.com/umamichi/items/c62d18b7ed81fdba63c2)  
 [日経_XTECH_3分でわかる WebAssembly](https://active.nikkeibp.co.jp/atcl/act/19/00146/032000001/)  
 [Rustでわかる！ WebAssemblyのメリット～処理速度の違いを、サンプルを作りながら体験しよう](https://codezine.jp/article/detail/15920)  
+[「WebAssembly」ならブラウザで高速にCもRustもGoも動く](https://news.mynavi.jp/techplus/article/programinglanguageoftheworld-20/)  
 
 WebAssemblyはWebブラウザーが実行できるバイナリー形式のアセンブリー言語。  
 CやC++といった各種プログラミング言語で開発したプログラムをコンパイルして、ブラウザー上で実行できる。  
